compiler/test/fail_compilation/traits_alone.d
/*
TEST_OUTPUT:
---
fail_compilation/traits_alone.d(11): Error: found `End of File` when expecting `(`
---
*/


//used to segfault
__traits
